# vision-transformers-cifar10

./: pyproject.toml  train.sh  train_cifar10.py
models/: cait.py  dyt.py  mlpmixer.py  mobilenet.py  resnet.py  vgg.py  vit.py  vit_small.py
